# chunk-search-rs

./: CODEOWNERS  Cargo.toml  README.md  build.rs  renovate.json
.github/workflows/: build-and-publish.yml  lint-and-test.yml  validate-codeowners.yml  validate-renovate.yml
docker/multi-arch/: Dockerfile
docker/single-target/: Dockerfile
src/: main.rs
src/protos/: mod.rs
