[package]
name = "chunk-search-rs"
version = "0.1.0"
authors = ["GiganticMinecraft"]
description = "Command line tool to traverse MineCraft regions and list chunks containing entities or tile-entities"
edition = "2018"

[build-dependencies]
protobuf-codegen = "3.0.3"

[dependencies]
protobuf = "3.0.3"
anvil-region = { git = "https://github.com/GiganticMinecraft/anvil-region", rev = "e3d62f53"}
named-binary-tag = "0.2"

clap = {version = "3.2.5", features = ["cargo"]}

# concurrent processing

crossbeam = "0.8.1"
crossbeam-channel = "0.5.5"
