[package]
name = "chunk-search-rs"
version = "0.1.0"
authors = ["GiganticMinecraft"]
description = "Command line tool to traverse MineCraft regions and list chunks containing entities or tile-entities"
edition = "2018"

[build-dependencies]
protobuf-codegen-pure = "2.28.0"

[dependencies]
protobuf = "2.28.0"
anvil-region = { git = "https://github.com/GiganticMinecraft/anvil-region", rev = "8dd1ca732686cac19f9957300414319108c07341"}
named-binary-tag = "0.6"

clap = {version = "4.1.9", features = ["derive"]}

# concurrent processing

crossbeam = "0.8.2"
crossbeam-channel = "0.5.7"
